[tool.poetry]
name = "tomatempo"
version = "0.1.0"
description = "An Pomodoro based application for time management."
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.24"
alembic = "^1.16.4"
typer = "^0.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pynvim = "^0.5.2"
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
